--- a/package.json
+++ b/package.json
@@ -82,7 +82,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server",
+    "start": "node server.js",
     "client": "npm start --prefix frontend",
     "dev": "concurrently \"npm start \"\"npm run client\"",
     "data:import": "node backend/seeder.js",
